--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.2.6",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
+    "framer-motion": "^10.15.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongodb": "5.6",
