--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nurseapp",
+  "name": "tu-nurse-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,29 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.6",
-    "@mui/x-date-pickers": "^6.9.1",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@types/node": "20.3.3",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "aos": "^2.3.4",
-    "axios": "^1.4.0",
-    "framer-motion": "^10.15.0",
-    "jsonwebtoken": "^9.0.0",
-    "moment": "^2.29.4",
-    "mongodb": "5.6",
-    "next": "13.4.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.1.1",
-    "recharts": "^2.7.2",
-    "typescript": "5.1.6"
+    "@clerk/nextjs": "^6.9.6",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
+    "@types/aos": "^3.0.7",
+    "aos": "^3.0.0-beta.6",
+    "bcrypt": "^5.1.1",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.3",
+    "motion": "^11.15.0",
+    "next": "15.1.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tu-nurse-app": "file:",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@types/aos": "^3.0.4"
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.3",
+    "typescript": "^5"
   }
 }
